--- a/src/main/java/projetocounterstrike/gui/usuario/JPanelListagem.form
+++ b/src/main/java/projetocounterstrike/gui/usuario/JPanelListagem.form
@@ -11,7 +11,6 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -25,22 +24,19 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="lblPesquisarNome">
+        <Component class="javax.swing.JLabel" name="lblFiltroNome">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Pesquisar por Nome"/>
+            <Property name="text" type="java.lang.String" value="Filtrar por nickname:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtPesquisarNome">
+        <Component class="javax.swing.JTextField" name="txfFiltroNome">
           <Properties>
-            <Property name="columns" type="int" value="5"/>
+            <Property name="columns" type="int" value="20"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPesquisarNomeActionPerformed"/>
-          </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnPesquisar">
+        <Component class="javax.swing.JButton" name="btnFiltrar">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Pesquisar"/>
+            <Property name="text" type="java.lang.String" value="Filtrar"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -57,26 +53,18 @@
         <Component class="javax.swing.JButton" name="btnNovo">
           <Properties>
             <Property name="text" type="java.lang.String" value="Novo"/>
+            <Property name="actionCommand" type="java.lang.String" value="Novo"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNovoActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnEditar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Editar"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnRemover">
           <Properties>
             <Property name="text" type="java.lang.String" value="Remover"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoverActionPerformed"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -89,7 +77,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
       <SubComponents>
-        <Container class="javax.swing.JScrollPane" name="scpBarraRolagem">
+        <Container class="javax.swing.JScrollPane" name="scpRolagem">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
               <BorderConstraints direction="Center"/>
@@ -102,10 +90,10 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="0">
-                    <Column editable="false" title="CPF" type="java.lang.Object"/>
-                    <Column editable="false" title="Nome" type="java.lang.Object"/>
-                    <Column editable="false" title="&#xda;ltimo Acesso" type="java.lang.Object"/>
-                    <Column editable="false" title="Cidade" type="java.lang.Object"/>
+                    <Column editable="false" title="Nickname" type="java.lang.Object"/>
+                    <Column editable="false" title="Data Cadastro" type="java.lang.Object"/>
+                    <Column editable="false" title="Data &#xda;ltimo Login" type="java.lang.Object"/>
+                    <Column editable="false" title="Pontos" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
